<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiscountCalc">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1C2F1"
        android:orientation="vertical"
        tools:context=".DiscountCalc"
        tools:showIn="@layout/activity_discount">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="37dp"
            android:text="@string/price_of_product" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:autofillHints="" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/discount_as_decimal" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_marginTop="39dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:background="#FF5722"
            android:onClick="calc"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="118dp"
            android:text="@string/result"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#FF5722"
            android:gravity="center"
            android:text="@string/discount_calculator"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>